# hyperparameter-in-graph-drawing

./: .gitignore  .gitmodules  README.md  USpG_rp_params2other_rpfs.py  add_quality_question.py  add_quality_question2.py  add_quality_question3.py  apply.py  build_scripts.ipynb  c_r_o.ipynb  compare_boxplot.py  compare_boxplot_experienced.py  compare_bus.py  compare_opt_rand_exp.py  compare_opt_rand_exp_m.py  compare_pareto_rand_exp.py  compare_paretoan_rand_exp.py  compare_rp_op.ipynb  compare_rpfs_applied_opfs.ipynb  compare_rpfs_opfs.ipynb  compare_rpfs_opfs.py  compare_seed.ipynb  compare_us.py  concat_experienced.py  concat_opfs.ipynb  concat_opfs.py  concat_rpfs.ipynb  concat_rpfs.py  concat_rpfs_ex.py  data.md  directions.json  draw.ipynb  draw_pareto.ipynb  edge_length.ipynb  ex.ipynb  ex2.gs  ex3.gs  explore_limitation.py  export_best_params.ipynb  export_best_params.py  (+43 more)
data/: USpowerGrid_opfs.json  USpowerGrid_opfs_node_resolution.json  USpowerGrid_optimized_data_nopos.json  USpowerGrid_randomized_data.json  USpowerGrid_result2.json  bull_optimized_data.json  bull_result.json  bull_rpfs.json  les_miserables_params.json  les_miserables_result.json  les_miserables_result2.json  les_miserables_rpfs.json  uuid_jst_map.json
data/optimization/: only_stress_USpowerGrid.json
data/rp_pos/: 7_USpowerGrid.json
data/rpfs_pos/: bull.json
drawing/: fm3.py  fruchterman_reingold.py  kamada_kawai.py  sgd.py
experiments/japan-vis/: a.sh  b.sh  boxplot_quality_metrics_data.py  c_b_e.py  c_p_e.py  c_p_p.py  compare_grid_sampling.ipynb  d.sh  draw_best_trial.ipynb  ex2_check_pref.ipynb  ex2_generate_pictures.ipynb  ex2_generate_pictures_for_paper.ipynb  ex2_quality.ipynb  ex2_result copy.ipynb  ex2_result.ipynb  ex2_result_f_oneway.ipynb  generate_best.py  generate_data.py  generate_empirical.py  generate_grid.py  generate_grid_p.py  generate_pareto.py  generate_pictures.py  generate_sampled_points.ipynb  generate_ss_grid.ipynb  multi_objective.py  multi_objective_p.py  quality_metrics_hp_plot.ipynb  rank_pareto_time-complexity-penalty.ipynb  sample.ipynb  single_objective.py  single_objective_copy.py  single_objective_grid_split_size.py  single_objective_p.py  single_objective_sampled_grid.py  time_complexity_cap_check.ipynb
experiments/optimization/: README.md  add_time_to_df.ipynb  choice_pareto.ipynb  choice_pareto_runtime.ipynb  db.sqlite3  draw_USpowerGrid.ipynb  draw_all_graph.ipynb  draw_all_graph_grid.ipynb  generate_empirical.py  generate_grid.py  generate_grid_v_pivots.py  generate_pareto.py  generate_randomized.py  generate_ss_grid.ipynb  good_params_boxplot.ipynb  grid_data_distribution.ipynb  grid_search_scaled_sum.ipynb  grid_search_scaled_sum_time.ipynb  human.py  multi_optimize_scaled.py  multi_ovjective.py  optimize_scaled_sum.py  optimize_scaled_sum_without_runtime.py  runner.sh  show_graph_info.ipynb
experiments/regression_analysis/: README.md  generate_grid.ipynb  generate_grid.py
presentation/: 0806.md
quality_metrics/: __init__.py  angular_resolution.py  aspect_ratio.py  crossing_angle.py  crossing_angle_maximization.py  crossing_number.py  gabriel_graph_property.py  ideal_edge_length.py  node_resolution.py  run_time.py  shape_based_metrics.py  stress.py
shell_scripts/: apply.sh  generate_rp_pos.sh  opfs.sh  optimization.sh  p_o.sh  parallel_optimization.sh  prepare_directories.sh
src/config/: const.py  dataset.py  layout.py  parameters.py  params_domains.py  paths.py  quality_metrics.py
src/generators/: drawing_and_qualities.py  graph.py  o_nfs.py  r_nfs.py
src/layouts/: sgd.py
src/mains/: generate_r_nfs.py
src/optimizers/: objective.py  single.py
src/quality_metrics/: angular_resolution.py  aspect_ratio.py  crossing_angle.py  crossing_number.py  gabriel_graph_property.py  ideal_edge_length.py  ideal_edge_lengths.py  neighborhood_preservation.py  node_resolution.py  run_time.py  shape_based_metrics.py  stress.py
src/scripts/: add_data.py  generate_e_nfs.py  generate_grid_nfs.py  generate_o_nfs.py  generate_r_nfs.py  notify.py  optimization.py
utils/: __init__.py  calc_quality_metrics.py  dataset.py  edge_crossing_finder.py  graph.py  objective.py
(+5365 files in other folders)
